# StepMark

./: .gitignore  AGENTS.md  README.md  editor.html  package-lock.json  package.json  selector.html  vite.config.ts
docs/: PROJECT.md  intro-share-为什么做StepMark.md
docs/images/: .gitkeep
docs/prds/: stepmark-v0.2.0-design.md  stepmark-v0.2.0-prd.md  stepmark-v0.3.0-design.md  stepmark-v0.3.0-prd.md
docs/reviews/: 2026-06-18-stepmark-v0.2.0-codex-review.md  2026-06-22-stepmark-v0.3.0-doc-review.md  2026-06-22-stepmark-v0.3.0-spec-plan-review.md
scripts/: build-exe.cmd
src/: editor.tsx  global.css  main.tsx  selector.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  migrate.rs  tray.rs
src-tauri/src/commands/: autostart.rs  clipboard.rs  mod.rs  save.rs  screenshot.rs
src/canvas/: EditorStage.tsx  badgeText.ts  exportCanvas.ts
src/components/: CropOverlay.tsx  EditorView.tsx  NumberingControls.tsx  StylePanel.tsx  TextInputOverlay.tsx  Toolbar.tsx
src/geometry/: arrowAnchor.test.ts  arrowHead.test.ts  arrowHead.ts  arrowLayout.test.ts  arrowLayout.ts  corners.test.ts  corners.ts  directionalLabelBox.ts  labelBox.test.ts  labelBox.ts  numberBadge.test.ts  numberBadge.ts  rectEdge.test.ts  rectEdge.ts  smartLabelBox.ts
src/ipc/: bridge.ts
src/store/: editorStore.ts  numberingStore.test.ts  numberingStore.ts  toolState.ts  toolStyleStore.test.ts  toolStyleStore.ts
src/style/: styleMapping.test.ts  styleMapping.ts
src/tools/: index.ts  useArrowTool.ts  useMosaicTool.ts  useRectTool.ts  (+2 more)
(+19 files in other folders)
