[package]
name = "stepmark"
version = "0.3.0"
description = "StepMark - a Windows screenshot annotation tool with auto-numbering"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stepmark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.9"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-autostart = "2.5.1"

# winreg is used to clean up the legacy autostart registry key from the pre-rename build (SnapNote → StepMark).
[target.'cfg(windows)'.dependencies]
winreg = "0.55"
